Client and server completed

--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,3 @@
 DATABASE = mongodb+srv://prabhat:priyanshuranjan@cluster0.62t4xlc.mongodb.net/mernstack?retryWrites=true&w=majority
 PORT = 8000
+SECRETKEY = MYNAMEISPRABHATRANJANPLEASEVISITMYWEBSITE
