--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "homepage": "https://PRABHATRANJAN-27082002.github.io/MernProject",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8000",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "gh-pages": "^6.1.0",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "npm": "^10.2.5",
@@ -24,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
